--- a/css/style.css
+++ b/css/style.css
@@ -5587,6 +5587,24 @@ i:before {
   z-index: 2;
 }
 
+.banner_area_contactus {
+  background: url(../img/home-slider/slider-5.jpg) no-repeat scroll center
+    center;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+}
+
+.banner_area_contactus:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .banner_area_activities {
   background: url(../img/home-slider/slider-1.jpg) no-repeat scroll center
     center;
@@ -5595,7 +5613,25 @@ i:before {
   z-index: 2;
 }
 
-.banner_area_activities::before {
+.banner_area_aboutdandeli {
+  background: url(../img/home-slider/slider-2.png) no-repeat scroll center
+    center;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+}
+
+.banner_area_aboutdandeli:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.banner_area_activities:before {
   content: "";
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
